added winery section and cards html and css

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,10 @@ body{
     margin: 0 auto;
 }
 
+.text-center{
+    text-align: center;
+}
+
 .grid{
     display:grid;
     gap:64px;
@@ -22,14 +26,56 @@ body{
     grid-template-columns: 1fr 1fr;
 }
 
+.grid-3-columns{
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
 .grid-3-columns-with-first-narrow{
     grid-template-columns: 1fr 2fr 2fr;
 }
 
+.card{
+    background: white;
+    margin: 30px 0;
+}
+
+.card-header img{
+    width: 100%;
+    height: 220px;
+    display:block;
+    margin: auto;
+}
+
+.card-body{
+    padding: 30px;
+}
+
+.card-footer{
+    padding: 0 25px 30px;
+}
+
+.btn{
+    display: block;
+    color: white;
+    background-color: #010130;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 16px;
+}
+
 section{
-    max-width:1200px;
+    max-width: 100%;
     margin: 0 auto;
-    padding:100px 0;
+    padding:100px;
+}
+
+section.secondary{
+    background: #f8f8f8;
 }
 
 header{
@@ -99,6 +145,23 @@ main h3{
     font-size: 40px;
     line-height: 1.5;
     color:#010130;
+    margin: 0;
+}
+
+main h4 {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1;
+    color: #010130;
+    margin: 0;
+    text-align: center;
+}
+
+main h5 {
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 1;
+    color: #010130;
     margin: 0;
 }
 
@@ -176,6 +239,11 @@ footer a{
     .img-responsive{
         max-width: 80%;
         border-radius: 5px;
+    }
+
+    .card-header img{
+        max-width: 80%;
+        max-height: 80%;
     }
 
     section{
