--- a/src/style.css
+++ b/src/style.css
@@ -40,8 +40,8 @@ body{
 }
 
 .card-header img{
-    width: 100%;
-    height: 220px;
+    width: 185px;
+    height: 185px;
     display:block;
     margin: auto;
 }
@@ -237,13 +237,8 @@ footer a{
     }
 
     .img-responsive{
-        max-width: 80%;
+        max-width: 60%;
         border-radius: 5px;
-    }
-
-    .card-header img{
-        max-width: 80%;
-        max-height: 80%;
     }
 
     section{
