--- a/src/style.css
+++ b/src/style.css
@@ -34,16 +34,19 @@ body{
     grid-template-columns: 1fr 2fr 2fr;
 }
 
+.embed{
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1 /1;
+}
+
 .card{
     background: white;
     margin: 30px 0;
 }
 
-.card-header img{
-    width: 185px;
-    height: 185px;
-    display:block;
-    margin: auto;
+.card-header.grid{
+    gap: 0;
 }
 
 .card-body{
@@ -237,11 +240,19 @@ footer a{
     }
 
     .img-responsive{
-        max-width: 60%;
+        width: 60%;
         border-radius: 5px;
     }
 
     section{
         padding:30px 10px;
+    }
+
+    .card-header img{
+        display: none;
+    }
+
+    .embed{
+        aspect-ratio: 16/9;
     }
 }
