--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,6 @@ body{
 
 .img-responsive{
     max-width: 100%;
-    border-radius: 5px;
 }
 
 .grid-2-columns{
@@ -38,6 +37,10 @@ body{
     width: 100%;
     height: 100%;
     aspect-ratio: 1 /1;
+}
+
+.instagram-embeds{
+    margin: 30px 0;
 }
 
 .card{
